@@ -1,3 +1,12 @@
+2007-09-06  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Adam Roben.
+
+        Register the WebKit DLL on initialization of the DumpRenderTree.
+
+        * DumpRenderTree/DumpRenderTree.vcproj/DumpRenderTree/DumpRenderTree.cpp:
+        (initialize):
+
 2007-09-05  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Oliver.
